--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body{
     padding:0px;
 }
 .header{
-    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F783204191439157960%2F&psig=AOvVaw3GGYflclISsbqIaUqFjbfH&ust=1722139181798000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKiH-fCqxocDFQAAAAAdAAAAABAE);
+    background-image: url(NGNL 2.png);
+    background-color: #cccccc;
     background-position: center center;
+    background-repeat: no-repeat;
     background-size: cover;
     height: 550px;
     width: 100%;
@@ -91,7 +93,8 @@ p{
     padding-left: 6px;
 }
 .main{
-    background: url(https://content.codecademy.com/programs/code-foundations-path/shards.png);
+    background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F488218415836409473%2F&psig=AOvVaw02v2PE3I8wiBc8cLtgEp61&ust=1722139914351000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPjVqdGtxocDFQAAAAAdAAAAABAEhttps://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F488218415836409473%2F&psig=AOvVaw02v2PE3I8wiBc8cLtgEp61&ust=1722139914351000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPjVqdGtxocDFQAAAAAdAAAAABAE);
+    background-color: #ccffbb
     margin: 0px;
     padding: 40px;
 }
