--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     padding:0px;
 }
 .header{
-    background-image: url("./NGNL 2.png");
+    background-image: url("../Images/NGNL 2.png");
     background-color: #abcdef;
     background-position: center center;
     background-repeat: no-repeat;
