--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     padding:0px;
 }
 .header{
-    background-image: url('../images/ngnl2.png');
+    background-image: url('../images/"NGNL 2.png"');
     background-color: #123456;
     background-position: center center;
     background-repeat: no-repeat;
