--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p{
     padding-left: 6px;
 }
 .main{
-    background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F488218415836409473%2F&psig=AOvVaw02v2PE3I8wiBc8cLtgEp61&ust=1722139914351000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPjVqdGtxocDFQAAAAAdAAAAABAEhttps://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F488218415836409473%2F&psig=AOvVaw02v2PE3I8wiBc8cLtgEp61&ust=1722139914351000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPjVqdGtxocDFQAAAAAdAAAAABAE);
+    background: url("../images/Propose.jpg");
     background-color: #ffffaa
     margin: 0px;
     padding: 40px;
