--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ body{
     padding:0px;
 }
 .header{
-    background-image: url("../images/NGNL 2.png");
+    background-image: url("../images/Propose.jpg");
     background-color: #aaff00;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 300px;
+    height: 400px;
     width: 100%;
 }
 
@@ -76,7 +76,7 @@ p{
     text-align: center;
     width: 60%;
 }
-.partner{
+/*.partner{
     padding: 20px;
     text-align: center;
     margin: auto;
@@ -88,13 +88,13 @@ p{
 .partner img{
     position: relative;
     top: 6px;
-}
+}*/
 .aa-logo{
     padding-left: 6px;
 }
 .main{
-    background: url("../images/Propose.jpg");
-    background-color: #ffffaa
+    background: url("../images/NGNL 2.png");
+    background-color: #ffea00
     margin: 0px;
     padding: 40px;
 }
