--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h2{
     font-weight: 100;
 }
 h3{
-    color: #000000;
+    color: #ffffff;
     font-family: 'Quicksand', sans-serif;
     font-size: 28px;
     font-weight: 400;
@@ -62,7 +62,7 @@ h3{
     text-align: center;
 }
 h4{
-    color: #0099ff;
+    color: #ffffff;
     font-family: 'Quicksand',sans-serif;
     font-size: 16px;
     font-weight: 300;
