--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15%;
+    height: 20%;
     width: 100%;
 }
 .overlay:before {
@@ -19,7 +19,7 @@ body{
     z-index: 1;
     display: block;
     position: absolute;   
-    height: 15%;
+    height: 10%;
     width: 100%;
     background: rgba(0, 0, 0, 0.6);
 }
@@ -80,7 +80,7 @@ p{
 
 /*Main body formatting*/
 .main{
-    background-color: #ffffaa
+    background-color: #aaffff
     height: 2000px;
     width: 100%;
     margin: 0px;
