--- a/style.css
+++ b/style.css
@@ -8,21 +8,22 @@ body{
 /*Header formatting*/
 .header{
     background-image: url(./images/Propose.jpg);
-    background-color: #aaff00;
+    background-color: #aaff00; /*in case image does not display, display bright green instead*/
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 20%;
+    height: 50%;
     width: 100%;
 }
+/*overlay with light grey*/
 .overlay:before {
     content: " ";
     z-index: 1;
     display: block;
     position: absolute;   
-    height: 10%;
+    height: 100px;
     width: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
 }
 .overlay * {
     position: relative; /* Makes elements display above overlay. */
@@ -81,9 +82,9 @@ p{
 
 /*Main body formatting*/
 .main{
-    background-image: url(./images/NGNL 2.png);
+    background-image: url(./images/'NGNL 2.png');
     background-color: #aaffff;
-    height: 2000px;
+    height: 500px;
     width: 100%;
     margin: 0px;
     padding: 40px;
